--- a/styles/allchar.module.css
+++ b/styles/allchar.module.css
@@ -24,7 +24,7 @@
 
 
 .charactersBox {
-  border: 1px solid white;
+  /* border: 1px solid white; */
   gap: 1.3rem;
   width: 70%;
   border-radius: 20px;
@@ -91,7 +91,7 @@
   justify-content: center;
   /* background: #dad7cd; */
   /* box-shadow: 0 8px 8px -4px white; */
-  border-top: 2px solid white;
+  /* border-top: 2px solid white; */
 
 
 }
@@ -127,10 +127,11 @@
  justify-content: center;
  flex-wrap: wrap;
  gap: 1rem;
- border: 2px solid white;
+ /* border: 6px solid; */
+
  border-radius: 20px;
  padding: 5%;
- 
+
 }
 
 
